--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "nodemon app.ts",
-    "dumpdata": "nodemon populateProducts.ts",
+    "dev": "nodemon src/app.ts",
+    "dumpdata": "nodemon src/populateProducts.ts",
     "build": "tsc -p ."
   },
   "keywords": [],
